--- a/about-us.html
+++ b/about-us.html
@@ -276,7 +276,7 @@
             <picture>
               <source media="(min-width: 1280px)"
                     srcset="img/header-desktop@1x.jpg">
-              <img class="page-header__img" src="img/header-mobile@1x.jpg" alt="" width="932" height="500" >
+              <img class="page-header__img" src="img/header-mobile@1x.jpg" alt="" width="932" height="500">
             </picture>
           </div>
 
@@ -287,8 +287,8 @@
           </h1>
 
           <div class="page-header__text">
-            <h2 class="page-header__guards">Хранитель</h2>
-            <span class="page-header__location">Локация</span>
+            <h1 class="page-header__guards">Кто мы</h1>
+            <!-- <span class="page-header__location">Локация</span> -->
           </div>
 
         </div>
@@ -297,7 +297,7 @@
 
     </header>
 
-      <main class="main  main--keepers">
+      <main class="main">
 
         <div class="container  follow-us">
           <div class="follow-us__soc-link-wrapper" id="follow-us-sticky">
@@ -328,126 +328,91 @@
 
         </div>
 
-        <div class="container  main-toggler__wrapper  main-toggler__wrapper--keepers">
-          <div class="main-toggler  main-toggler--keepers">
-            <a href="castles.html" class="main-toggler__toggle  main-toggler__toggle--castle" target="_self">ЗАМКИ</a>
-            <a href="keepers.html" class="main-toggler__toggle  main-toggler__toggle--people  main-toggler__toggle--active" target="_self">Вартовi</a>
+        <article class="about-us">
+          <div class="container">
+
+            <section class="about-us__intro">
+              <p class="about-us__para">
+                Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Если ведущими, злых которое гор, свой бросил первую дороге текстов речью строчка рыбного его алфавит. Имени за рекламных себя, страну журчит свою образ, обеспечивает большого.
+              </p>
+              <p class="about-us__para">
+                Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Ее свой прямо составитель путь точках буквенных алфавит его дорогу однажды. Океана запятой коварный путь мир, приставка, своих толку вопрос языкового эта, переписали свою прямо но! Ipsum решила собрал вершину, обеспечивает ему несколько единственное запятой встретил. Свой рукописи, коварный предупредила текстами имени даже.
+              </p>
+              <p class="about-us__para">
+                Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Если ведущими, злых которое гор, свой бросил первую дороге текстов речью строчка рыбного его алфавит.
+              </p>
+            </section>
+
+            <ul class="about-us__list">
+              <li class="about-us__item">
+                <div class="about-us__img-wrapper">
+                  <img src="https://dummyimage.com/398x530/787878/fff.jpg&text=%D0%A4%D0%BE%D1%82%D0%BE" alt="Фото" width="398" height="530">
+                </div>
+                <div class="about-us__text">
+                  <h2 class="about-us__title">Name Surname Familyname</h2>
+                  <span class="about-us__position">Руководитель проекта</span>
+                  <p class="about-us__descr">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Залетают не скатился он, послушавшись речью, предложения обеспечивает. Подзаголовок буквенных дороге, агенство океана грустный, заголовок правилами речью раз которой переулка текст языкового. Буквоград, текста, запятой.</p>
+                </div>
+              </li>
+
+              <li class="about-us__item">
+                <div class="about-us__img-wrapper">
+                  <img src="https://dummyimage.com/398x530/787878/fff.jpg&text=%D0%A4%D0%BE%D1%82%D0%BE" alt="Фото" width="398" height="530">
+                </div>
+                <div class="about-us__text">
+                  <h2 class="about-us__title">Name Surname Familyname</h2>
+                  <span class="about-us__position">Фотограф</span>
+                  <p class="about-us__descr">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Залетают не скатился он, послушавшись речью, предложения обеспечивает. Подзаголовок буквенных дороге, агенство океана грустный, заголовок правилами речью раз которой переулка текст языкового. Буквоград, текста, запятой.</p>
+                </div>
+              </li>
+
+              <li class="about-us__item">
+                <div class="about-us__img-wrapper">
+                  <img src="https://dummyimage.com/398x530/787878/fff.jpg&text=%D0%A4%D0%BE%D1%82%D0%BE" alt="Фото" width="398" height="530">
+                </div>
+                <div class="about-us__text">
+                  <h2 class="about-us__title">Name Surname Familyname</h2>
+                  <span class="about-us__position">Видеоператор</span>
+                  <p class="about-us__descr">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Залетают не скатился он, послушавшись речью, предложения обеспечивает. Подзаголовок буквенных дороге, агенство океана грустный, заголовок правилами речью раз которой переулка текст языкового. Буквоград, текста, запятой.</p>
+                </div>
+              </li>
+
+              <li class="about-us__item">
+                <div class="about-us__img-wrapper">
+                  <img src="https://dummyimage.com/398x530/787878/fff.jpg&text=%D0%A4%D0%BE%D1%82%D0%BE" alt="Фото" width="398" height="530">
+                </div>
+                <div class="about-us__text">
+                  <h2 class="about-us__title">Name Surname Familyname</h2>
+                  <span class="about-us__position">Журналист</span>
+                  <p class="about-us__descr">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Залетают не скатился он, послушавшись речью, предложения обеспечивает. Подзаголовок буквенных дороге, агенство океана грустный, заголовок правилами речью раз которой переулка текст языкового. Буквоград, текста, запятой.</p>
+                </div>
+              </li>
+
+              <li class="about-us__item">
+                <div class="about-us__img-wrapper">
+                  <img src="https://dummyimage.com/398x530/787878/fff.jpg&text=%D0%A4%D0%BE%D1%82%D0%BE" alt="Фото" width="398" height="530">
+                </div>
+                <div class="about-us__text">
+                  <h2 class="about-us__title">Name Surname Familyname</h2>
+                  <span class="about-us__position">Фотограф</span>
+                  <p class="about-us__descr">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Залетают не скатился он, послушавшись речью, предложения обеспечивает. Подзаголовок буквенных дороге, агенство океана грустный, заголовок правилами речью раз которой переулка текст языкового. Буквоград, текста, запятой.</p>
+                </div>
+              </li>
+
+              <li class="about-us__item">
+                <div class="about-us__img-wrapper">
+                  <img src="https://dummyimage.com/398x530/787878/fff.jpg&text=%D0%A4%D0%BE%D1%82%D0%BE" alt="Фото" width="398" height="530">
+                </div>
+                <div class="about-us__text">
+                  <h2 class="about-us__title">Name Surname Familyname</h2>
+                  <span class="about-us__position">Фотограф</span>
+                  <p class="about-us__descr">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Залетают не скатился он, послушавшись речью, предложения обеспечивает. Подзаголовок буквенных дороге, агенство океана грустный, заголовок правилами речью раз которой переулка текст языкового. Буквоград, текста, запятой.</p>
+                </div>
+              </li>
+
+            </ul>
           </div>
-        </div>
 
-        <article class="guards-content2">
-
-          <section class="container  guards-content__text-block2  clearfix">
-
-            <figure class="guards-content__video-wrapper2">
-              <video src="" width="100%" height="auto" poster="img/video-poster-mobile@1x.jpg">
-              </video>
-              <figcaption class="guards-content__figcaption">Видео. Краткое описание</figcaption>
-            </figure>
-
-            <h2 class="guards-content__title">Шепотом</h2>
-
-            <p><span><strong>Иосиф Бартош — художник,</strong></span> и его кисти принадлежит портрет Илоны, о котором я рассказывала только что.</p>
-            <p>Иосиф взял Замок в аренду на 49 лет с целью постепенной реставрации, фактически, за собственный счет. Вместе с женой, Татьяной, они пишут картины, проводят экскурсии, Татьяна, помимо этого, владеет уникальной техникой росписи «писанок» — среди ее заказчиков много известных украинских политиков, деятелей культуры, коллекционеров. Деньги с продажи своих работ художники пускают на реставрационные работы, которым конца-края не видно.</p>
-            <p>Живут они тут же, в одной из холодных, не отапливаемых комнат замка. И молча, не жалуясь и не прося, несут свою миссию.</p>
-
-            <figure class="guards-content__img2  guards-content__img--left">
-              <picture>
-                <source media="(min-width: 1280px)"
-                srcset="img/bartosh-01-desktop@1x.jpg">
-                <img src="img/bartosh-01-mobile@1x.jpg" alt="" width="320" height="480">
-              </picture>
-              <figcaption class="guards-content__figcaption">Фото. Краткое описание</figcaption>
-            </figure>
-
-            <p><span><strong>Сейчас этот Замок считается одним из самых сильных Мест Любви в мире.</strong></span></p>
-            <p>Памятник любви Илоны и Имре, которые поженились, несмотря на запреты и всеобщее осуждение.</p>
-            <p>В обмен на этот выбор у Княгини забрали всё - включая детей. И мужа. Умерла она в изгнании, не дожив несколько месяцев до священной освободительной войны, которую возглавил её сын.</p>
-
-            <p>Иосиф взял Замок в аренду на 49 лет с целью постепенной реставрации, фактически, за собственный счет. Вместе с женой, Татьяной, они пишут картины, проводят экскурсии, Татьяна, помимо этого, владеет уникальной техникой росписи «писанок» — среди ее заказчиков много известных украинских политиков, деятелей культуры, коллекционеров. Деньги с продажи своих работ художники пускают на реставрационные работы, которым конца-края не видно.</p>
-            <p>Живут они тут же, в одной из холодных, не отапливаемых комнат замка. И молча, не жалуясь и не прося, несут свою миссию.</p>
-
-            <figure class="guards-content__img2  guards-content__img--right">
-              <picture>
-                <source media="(min-width: 1280px)"
-                srcset="img/bartosh-02-desktop@1x.jpg">
-                <img src="img/bartosh-02-mobile@1x.jpg" alt="" width="320" height="214">
-              </picture>
-              <figcaption class="guards-content__figcaption">Фото. Краткое описание</figcaption>
-            </figure>
-
-            <p>Иосиф Бартош рассказал нам, что иногда здесь проводят свадебные обряды, и те пары, кому посчастливилось — любят друг друга вечно.</p>
-            <p><span><strong>А еще он сказал, "что у настоящей женщины внутри всегда сидит небольшой дьявол".</strong></span></p>
-
-            <p>Памятник любви Илоны и Имре, которые поженились, несмотря на запреты и всеобщее осуждение.</p>
-            <p>В обмен на этот выбор у Княгини забрали всё - включая детей. И мужа. Умерла она в изгнании, не дожив несколько месяцев до священной освободительной войны, которую возглавил её сын.</p>
-
-            <a class="guards-content__readmore2  read-more-link" href="">Замки</a>
-
-          </section>
-
-          <article class="guards-gallery">
-            <div class="guards-gallery__container  swiper-container--galery">
-              <div class="guards-gallery__slides  swiper-wrapper">
-
-                <div class="guards-gallery__slide  swiper-slide">
-                  <div class="guards-gallery__img-container">
-                    <picture>
-                      <source media="(min-width: 1280px)"
-                      srcset="img/guards-gallery-bartosh-desktop-01@1x.jpg">
-                      <img src="img/guards-gallery-bartosh-mobile-01@1x.jpg" alt="Галерея" width="275" height="189">
-                    </picture>
-                  </div>
-                </div>
-
-                <div class="guards-gallery__slide  swiper-slide">
-                  <div class="guards-gallery__img-container">
-                    <picture>
-                      <source media="(min-width: 1280px)"
-                      srcset="img/guards-gallery-bartosh-desktop-02@1x.jpg">
-                      <img src="img/guards-gallery-bartosh-mobile-02@1x.jpg" alt="Галерея" width="275" height="189">
-                    </picture>
-                  </div>
-                </div>
-
-                <div class="guards-gallery__slide  swiper-slide">
-                  <div class="guards-gallery__img-container">
-                    <picture>
-                      <source media="(min-width: 1280px)"
-                      srcset="img/guards-gallery-bartosh-desktop-01@1x.jpg">
-                      <img src="img/guards-gallery-bartosh-mobile-01@1x.jpg" alt="Галерея" width="275" height="189">
-                    </picture>
-                  </div>
-                </div>
-
-                <div class="guards-gallery__slide  swiper-slide">
-                  <div class="guards-gallery__img-container">
-                    <picture>
-                      <source media="(min-width: 1280px)"
-                      srcset="img/guards-gallery-bartosh-desktop-02@1x.jpg">
-                      <img src="img/guards-gallery-bartosh-mobile-02@1x.jpg" alt="Галерея" width="275" height="189">
-                    </picture>
-                  </div>
-                </div>
-
-              </div>
-            </div>
-            <div class="guards-gallery__link-container2">
-              <a href="" class="guards-gallery__link  read-more-link">
-                Галерея
-              </a>
-            </div>
-          </article>
-
-        </article>
-
-        <article class="map">
-          <h2 class="map__title">Доїхати до нас</h2>
-          <div class="map__wrapper">
-            <div class="map__content" id="map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d42308.00819658375!2d22.8162958!3d48.4900881!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb651e306ebc4b04c!2z0KHQtdC90YIt0JzRltC60LvQvtGI!5e0!3m2!1sru!2sua!4v1500979791446" frameborder="0" allowfullscreen></iframe>
-            </div>
-          </div>
         </article>
 
       </main>
@@ -555,7 +520,7 @@
       <p class="page-footer__text">
         Формально — чужі, офіційно — державні. <br>Наречені історичними пам’ятками, без шансів на відновлення. Це споруди, що оберігаються простими людьми. Тими, хто мав честь народитися у тій частині географії.
       </p>
-      <form action="/" method="post" class="subscription">
+      <form action="" method="" class="subscription">
         <div class="subscription__inner">
 
           <div class="subscription__logo-container">
@@ -636,7 +601,6 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.js"></script>
   <script src="js/lib/jquery.sticky-kit.js"></script>
   <script src="js/lib/swiper.jquery.min.js"></script>
-  <!-- <script src="js/lib/background-check.min.js"></script> -->
   <script src="js/scripts.js"></script>
 
   <script>
