--- a/about-us.html
+++ b/about-us.html
@@ -399,16 +399,16 @@
                 </div>
               </li>
 
-              <li class="about-us__item">
-                <div class="about-us__img-wrapper">
-                  <img src="https://dummyimage.com/398x530/787878/fff.jpg&text=%D0%A4%D0%BE%D1%82%D0%BE" alt="Фото" width="398" height="530">
-                </div>
-                <div class="about-us__text">
-                  <h2 class="about-us__title">Name Surname Familyname</h2>
-                  <span class="about-us__position">Фотограф</span>
-                  <p class="about-us__descr">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Залетают не скатился он, послушавшись речью, предложения обеспечивает. Подзаголовок буквенных дороге, агенство океана грустный, заголовок правилами речью раз которой переулка текст языкового. Буквоград, текста, запятой.</p>
-                </div>
-              </li>
+  <!--             <li class="about-us__item">
+    <div class="about-us__img-wrapper">
+      <img src="https://dummyimage.com/398x530/787878/fff.jpg&text=%D0%A4%D0%BE%D1%82%D0%BE" alt="Фото" width="398" height="530">
+    </div>
+    <div class="about-us__text">
+      <h2 class="about-us__title">Name Surname Familyname</h2>
+      <span class="about-us__position">Фотограф</span>
+      <p class="about-us__descr">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Залетают не скатился он, послушавшись речью, предложения обеспечивает. Подзаголовок буквенных дороге, агенство океана грустный, заголовок правилами речью раз которой переулка текст языкового. Буквоград, текста, запятой.</p>
+    </div>
+  </li> -->
 
             </ul>
           </div>
