Mob. vers - complete

--- a/keepers-2.html
+++ b/keepers-2.html
@@ -302,9 +302,6 @@
         <div class="container  follow-us">
           <div class="follow-us__soc-link-wrapper" id="follow-us-sticky">
             <a class="follow-us__soc-link">Поділитися
-              <!-- <svg class="follow-us__plus  follow-us__plus--close  follow-us__plus--open" width="16" height="16">
-                <use xlink:href="#plus"/>
-              </svg> -->
               <div class="follow-us__plus follow-us__plus--close follow-us__plus--open"></div>
             </a>
             <article class="social-links  social-links--close">
@@ -325,15 +322,21 @@
               </a>
             </article>
           </div>
+          <div class="follow-us__inner">
+            <div class="main-toggler" id="follow-us-toggler">
+              <a href="castles.html" class="main-toggler__toggle  main-toggler__toggle--castle  main-toggler__toggle--active" target="_self">ЗАМКИ</a>
+              <a href="keepers.html" class="main-toggler__toggle  main-toggler__toggle--people" target="_self">Вартовi</a>
+            </div>
+          </div>
 
         </div>
 
-        <div class="container  main-toggler__wrapper  main-toggler__wrapper--keepers">
+        <!-- <div class="container  main-toggler__wrapper  main-toggler__wrapper--keepers">
           <div class="main-toggler  main-toggler--keepers">
             <a href="castles.html" class="main-toggler__toggle  main-toggler__toggle--castle" target="_self">ЗАМКИ</a>
             <a href="keepers.html" class="main-toggler__toggle  main-toggler__toggle--people  main-toggler__toggle--active" target="_self">Вартовi</a>
           </div>
-        </div>
+        </div> -->
 
         <article class="guards-content2">
 
