--- a/keepers.html
+++ b/keepers.html
@@ -276,7 +276,7 @@
             <picture>
               <source media="(min-width: 768px)"
                     srcset="img/svirzh-castle-head-desktop@1x.jpg">
-              <img class="page-header__img" src="img/svirzh-castle-head-mobile@1x.jpg" alt="Фото" width="730">
+              <img class="page-header__img" src="img/svirzh-castle-head-mobile@1x.jpg" alt="Фото" width="768">
             </picture>
           </div>
 
@@ -354,15 +354,41 @@
             <p>Згідно відповіді на запит від Львівської ОДА — цей замок відкритий для передачі у концесію. У 1997 році його було передано Національній Спілці Архітекторів України для пристосування під будинок творчості. Користувач достатньо зробив для призупинення руйнування таутворив адміністрацію замку для недопущення розкрадання, але коштів на відбудову замку недостатньо, тому ведеться пошук інвестора.</p>
           </section>
 
-          <div class="guards-content__img-wrapper">
-            <figure class="guards-content__img">
-              <picture>
-                <source media="(min-width: 768px)"
-                srcset="img/svirzh-castle-04@1x.jpg">
-                <img src="img/svirzh-castle-04@0,75x.jpg" alt="" width="730">
-              </picture>
-              <figcaption class="guards-content__figcaption  guards-content__figcaption--slide">Фото. Краткое описание</figcaption>
-            </figure>
+          <div class="swiper-container-content  guards-content__img-wrapper">
+
+            <div class="swiper-wrapper">
+
+              <figure class="swiper-slide  guards-content__img">
+                <picture>
+                  <source media="(min-width: 768px)"
+                  srcset="img/svirzh-castle-04@1x.jpg">
+                  <img src="img/svirzh-castle-04@0,75x.jpg" alt="" width="730">
+                </picture>
+                <figcaption class="guards-content__figcaption  guards-content__figcaption--slide">Краткое описание 1</figcaption>
+              </figure>
+
+              <figure class="guards-content__img  swiper-slide">
+                <picture>
+                  <source media="(min-width: 768px)"
+                  srcset="img/svirzh-castle-08@1x.jpg">
+                  <img src="img/svirzh-castle-08@0,75x.jpg" alt="" width="730">
+                </picture>
+                <figcaption class="guards-content__figcaption  guards-content__figcaption--slide">Краткое описание 2</figcaption>
+              </figure>
+
+              <figure class="guards-content__img  swiper-slide">
+                <picture>
+                  <source media="(min-width: 768px)"
+                  srcset="img/svirzh-castle-14@1x.jpg">
+                  <img src="img/svirzh-castle-14@0,75x.jpg" alt="" width="730">
+                </picture>
+                <figcaption class="guards-content__figcaption  guards-content__figcaption--slide">Краткое описание 3</figcaption>
+              </figure>
+
+            </div>
+
+            <div class="swiper-pagination  guards-content__pagination"></div>
+
           </div>
 
           <section class="container  guards-content__text-block">
@@ -379,7 +405,7 @@
                 srcset="img/svirzh-castle-08@1x.jpg">
                 <img src="img/svirzh-castle-08@0,75x.jpg" alt="" width="730">
               </picture>
-              <figcaption class="guards-content__figcaption  guards-content__figcaption--slide">Фото. Краткое описание</figcaption>
+              <figcaption class="guards-content__figcaption">Фото. Краткое описание</figcaption>
             </figure>
           </div>
 
@@ -407,7 +433,7 @@
                 srcset="img/svirzh-castle-14@1x.jpg">
                 <img src="img/svirzh-castle-14@0,75x.jpg" alt="" width="730">
               </picture>
-              <figcaption class="guards-content__figcaption  guards-content__figcaption--slide">Фото. Краткое описание</figcaption>
+              <figcaption class="guards-content__figcaption">Фото. Краткое описание</figcaption>
             </figure>
           </div>
 
@@ -428,7 +454,7 @@
                 srcset="img/svirzh-castle-20@1x.jpg">
                 <img src="img/svirzh-castle-20@0,75x.jpg" alt="" width="730">
               </picture>
-              <figcaption class="guards-content__figcaption  guards-content__figcaption--slide">Фото. Краткое описание</figcaption>
+              <figcaption class="guards-content__figcaption">Фото. Краткое описание</figcaption>
             </figure>
           </div>
 
@@ -447,31 +473,33 @@
                 srcset="img/svirzh-castle-20@1x.jpg">
                 <img src="img/svirzh-castle-20@0,75x.jpg" alt="" width="730">
               </picture>
-              <figcaption class="guards-content__figcaption  guards-content__figcaption--slide">Фото. Краткое описание</figcaption>
+              <figcaption class="guards-content__figcaption">Фото. Краткое описание</figcaption>
             </figure>
           </div>
 
           <div class="guards-content__sibling-wrapper">
 
-            <div class="container">
-              <div class="guards-content__sibling-top">
-                <span class="guards-content__sibling">Вартовий
-                </span>
-                <a class="read-more-link  guards-content__toggle" href="">Дивитися</a>
+            <div class="guards-content__sibling-top">
+              <span class="guards-content__sibling">Вартовий
+              </span>
+              <a class="read-more-link  guards-content__toggle" href="">Дивитися</a>
+            </div>
+
+            <a class="guards-content__img-link" href="">
+              <div class="guards-content__img-wrapper  guards-content__img-wrapper--sibling-link">
+                <figure class="guards-content__img">
+                  <picture>
+                    <source media="(min-width: 768px)"
+                    srcset="img/svirzh-guard-01@1x.jpg">
+                    <img src="img/svirzh-guard-01@0,75x.jpg" alt="" width="730">
+                  </picture>
+                </figure>
               </div>
-            </div>
+            </a>
 
-            <div class="guards-content__img-wrapper  guards-content__img-wrapper--sibling-link">
-              <figure class="guards-content__img">
-                <picture>
-                  <source media="(min-width: 768px)"
-                  srcset="img/svirzh-guard-01@1x.jpg">
-                  <img src="img/svirzh-guard-01@0,75x.jpg" alt="" width="730">
-                </picture>
-              </figure>
+            <div class="guards-content__name">
+              <a href="">Коцуленко <br>Владимир Михайлович</a>
             </div>
-
-            <div class="guards-content__name">Коцуленко Владимир Михайлович</div>
 
           </div>
 
