--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 
           <h1 class="page-header__title">
             <a href="index.html">
-              <img src="img/12-guards-logo.svg" alt="12 Вартових" width="55" height="93">
+              <img src="img/12-guards-logo.svg" alt="12 Вартових" width="135" height="61.4167">
             </a>
           </h1>
 
@@ -373,7 +373,7 @@
             <p class="main-block__text">Для того, щоб зробити це, ми проїхали 135 000 км і побачили 30 замків. Порозпитували 345 людей. Підняли архіви, які тільки були доступні. Закохалися у кожну цеглинку. <br>Знайшли 12 вартових – саме вони є</p>
             <span class="main-block__hero-projects">ГОЛОВНИМИ ГЕРОЯМИ ПРОЕКТУ</span>
 
-            <div class="main-toggler">
+            <div class="main-toggler  main-toggler--index">
               <a href="castles.html" class="main-toggler__toggle  main-toggler__toggle--castle  main-toggler__toggle--active next">ЗАМКИ</a>
               <a href="keepers.html" class="main-toggler__toggle  main-toggler__toggle--people">Вартовi</a>
             </div>
@@ -875,7 +875,8 @@
         </div>
 
         <div class="copyrights__text">
-          <a class="copyrights__findin" href="http://findinukraine.com" target="_blank">© 2017 — Знайдено в Україні. Всі права захищено</a>
+          <span class="copyrights__findin">© 2017 — <a class="copyrights__findin-link" href="http://findinukraine.com" target="_blank">Знайдено в Україні.</a>
+             Всі права захищено</span>
           <a class="copyrights__link" href="it-doors.com" target="_blank">
             <img src="img/it-doors-logo.svg" alt="IT Doors logo" width="49.28" height="18">
           </a>
@@ -891,9 +892,10 @@
   </footer>
 
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="js/lib/jquery.sticky-kit.js"></script>
   <script src="js/lib/swiper.jquery.min.js"></script>
+  <script src="js/lib/ofi.min.js"></script>
   <script src="js/scripts.js"></script>
 
   <script>
